support java 1.9/1.10 (appease DatatypeConverter Exception)